--- a/src/styles/blogPost.css
+++ b/src/styles/blogPost.css
@@ -230,7 +230,7 @@
   max-width: 100%;
   height: auto;
   border-radius: 8px;
-  margin: 24px 0;
+  margin: 24px auto;
   display: block;
 }
 
@@ -241,7 +241,8 @@
 }
 
 .blog-post-body p[style*="text-align: center"] img,
-.blog-post-body [style*="text-align: center"] img {
+.blog-post-body [style*="text-align: center"] img,
+.blog-post-body .blog-content-image {
   margin-left: auto;
   margin-right: auto;
 }
@@ -249,6 +250,8 @@
 /* Images with inline width */
 .blog-post-body img[width] {
   max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Table styling from editor */
